--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-refresh": "^0.11.0",
+    "umi-request": "^1.4.0",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
