--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -39,6 +39,8 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -52,7 +54,6 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-refresh": "^0.11.0",
-    "umi-request": "^1.4.0",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
@@ -65,6 +66,7 @@
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "^4.7.4",
+    "umi-request": "^1.4.0",
     "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
@@ -74,7 +76,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "commit": "git cz"
   },
   "eslintConfig": {
     "extends": [
@@ -150,8 +153,10 @@
       "react-app"
     ]
   },
-  "devDependencies": {
-    "less": "^4.1.3",
-    "less-loader": "^11.0.0"
+  "devDependencies": {},
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    }
   }
 }
