feat(custom): 新增标准化commit-msg

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -153,10 +153,5 @@
       "react-app"
     ]
   },
-  "devDependencies": {},
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-customizable"
-    }
-  }
+  "devDependencies": {}
 }
