--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -76,8 +76,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
-    "commit": "git cz"
+    "test": "node scripts/test.js"
   },
   "eslintConfig": {
     "extends": [
