--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
@@ -15,6 +16,7 @@
     "@types/react-dom": "^18.0.5",
     "ahooks": "^3.5.2",
     "antd": "^4.22.5",
+    "await-to-js": "^3.0.0",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
@@ -26,7 +28,7 @@
     "classnames": "^2.3.1",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
-    "dayjs": "^1.11.3",
+    "dayjs": "^1.11.5",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
@@ -151,6 +153,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "devDependencies": {}
+  }
 }
